<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">


	<modelVersion>4.0.0</modelVersion>
	<groupId>com.mock</groupId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>
	<name>Trading</name>
	<url>http://www.elvenland.com</url>

	<repositories>
		<!-- http://maven.apache.org/guides/mini/guide-coping-with-sun-jars.html -->

		<repository>
			<id>Central</id>
			<name>central</name>
			<url>http://repo1.maven.org/maven2</url>
		</repository>

		<repository>
			<id>maven2-repository.dev.java.net</id>
			<name>Java.net Repository for Maven</name>
			<url>http://download.java.net/maven/2/</url>
			<layout>default</layout>
		</repository>

		<repository>
			<id>repository.jboss.org-public</id>
			<name>JBoss repository</name>
			<url>https://repository.jboss.org/nexus/content/groups/public</url>
		</repository>
		<repository>
			<id>java.net</id>
			<name>Java.net Maven repo</name>
			<url>http://download.java.net/maven/2/</url>
		</repository>
		<repository>
			<id>clojars.org</id>
			<url>http://clojars.org/repo</url>
		</repository>
	</repositories>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>

		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.5.0-b01</version>
		</dependency>
		<dependency>
			<groupId>org.apache.velocity</groupId>
			<artifactId>velocity</artifactId>
			<version>1.7</version>
		</dependency>

		<dependency>
			<groupId>org.eclipse.jetty.aggregate</groupId>
			<artifactId>jetty-all</artifactId>
			<version>9.0.4.v20130625</version>
		</dependency>

		<dependency>
			<groupId>org.zeromq</groupId>
			<artifactId>jzmq</artifactId>
			<version>2.2.0</version>
		</dependency>

		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.16</version>
		</dependency>

		<dependency>
			<groupId>com.sun.jersey</groupId>
			<artifactId>jersey-server</artifactId>
			<version>1.15</version>
		</dependency>
		<dependency>
			<groupId>com.sun.jersey</groupId>
			<artifactId>jersey-grizzly2</artifactId>
			<version>1.15</version>
		</dependency>

		<dependency>
			<groupId>ta-lib</groupId>
			<artifactId>talib</artifactId>
			<version>0.4</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/../ElvenlandLib/lib/ta-lib-0.4.0.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>jfreechart</groupId>
			<artifactId>jcommon</artifactId>
			<version>1.0.18</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/../ElvenlandLib/lib/jcommon-1.0.18.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>net.sourceforge.collections</groupId>
			<artifactId>collections-generic</artifactId>
			<version>4.01</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>3.8.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.espertech</groupId>
			<artifactId>esper</artifactId>
			<version>4.9.0</version>
		</dependency>
		<dependency>
			<groupId>com.espertech</groupId>
			<artifactId>esperio-csv</artifactId>
			<version>4.9.0</version>
		</dependency>
		<dependency>
			<groupId>xerces</groupId>
			<artifactId>xercesImpl</artifactId>
			<version>2.9.1</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>apache-log4j-extras</artifactId>
			<version>1.2.17</version>
		</dependency>
		<dependency>
			<groupId>net.sourceforge.jtds</groupId>
			<artifactId>jtds</artifactId>
			<version>1.3.1</version>
		</dependency>
		<dependency>
			<groupId>commons-dbcp</groupId>
			<artifactId>commons-dbcp</artifactId>
			<version>1.4</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jdbc</artifactId>
			<version>3.1.4.RELEASE</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-tx</artifactId>
			<version>3.1.4.RELEASE</version>
		</dependency>

		<dependency>
			<groupId>joda-time</groupId>
			<artifactId>joda-time</artifactId>
			<version>2.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.camel</groupId>
			<artifactId>camel-core</artifactId>
			<version>2.11.0</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.5</version>
		</dependency>


		<dependency>
			<groupId>colt</groupId>
			<artifactId>colt</artifactId>
			<version>1.2.0</version>
		</dependency>

		<dependency>
			<groupId>com.netflix.astyanax</groupId>
			<artifactId>astyanax-cassandra</artifactId>
			<version>1.56.37</version>
		</dependency>

		<dependency>
			<groupId>com.netflix.astyanax</groupId>
			<artifactId>astyanax-thrift</artifactId>
			<version>1.56.37</version>
		</dependency>

		<dependency>
			<groupId>com.netflix.astyanax</groupId>
			<artifactId>astyanax-entity-mapper</artifactId>
			<version>1.56.37</version>
		</dependency>
		<dependency>
			<groupId>com.netflix.astyanax</groupId>
			<artifactId>astyanax-examples</artifactId>
			<version>1.56.37</version>
		</dependency>
		<dependency>
			<groupId>com.netflix.astyanax</groupId>
			<artifactId>astyanax-test</artifactId>
			<version>1.56.31</version>
		</dependency>


		<dependency>
			<groupId>com.google.protobuf</groupId>
			<artifactId>protobuf-java</artifactId>
			<version>2.4.1</version>
		</dependency>
		<dependency>
			<groupId>org.jasypt</groupId>
			<artifactId>jasypt</artifactId>
			<version>1.9.0</version>
		</dependency>
		<dependency>
			<groupId>org.jasypt</groupId>
			<artifactId>jasypt-spring3</artifactId>
			<version>1.9.0</version>
		</dependency>

		<dependency>
			<groupId>com.lowagie</groupId>
			<artifactId>itext</artifactId>
			<version>2.1.5</version>
		</dependency>

		<dependency>
			<groupId>com.netflix.astyanax</groupId>
			<artifactId>astyanax-core</artifactId>
			<version>1.56.37</version>
		</dependency>
		<dependency>
			<groupId>com.netflix.astyanax</groupId>
			<artifactId>astyanax-recipes</artifactId>
			<version>1.56.37</version>
		</dependency>
		<dependency>
			<groupId>com.espertech</groupId>
			<artifactId>esperio-db</artifactId>
			<version>4.9.0</version>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<!-- <version>14.0-rc1</version> -->
			<version>15.0</version>
		</dependency>


		<dependency>
			<groupId>com.sun.jersey</groupId>
			<artifactId>jersey-servlet</artifactId>
			<version>1.15</version>
		</dependency>

		<dependency>
			<groupId>jfreechart</groupId>
			<artifactId>jfreechart</artifactId>
			<version>1.0.15</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/../ElvenlandLib/lib/jfreechart-1.0.15.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>jfreechart</groupId>
			<artifactId>servlet</artifactId>
			<version>1.0.0</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/../ElvenlandLib/lib/servlet.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>com.googlecode.json-simple</groupId>
			<artifactId>json-simple</artifactId>
			<version>1.1</version>
		</dependency>
		<dependency>
			<groupId>commons-configuration</groupId>
			<artifactId>commons-configuration</artifactId>
			<version>1.9</version>
		</dependency>
		<dependency>
			<groupId>storm</groupId>
			<artifactId>storm</artifactId>
			<version>0.8.2</version>
		</dependency>
		<dependency>
			<groupId>com.hmsonline</groupId>
			<artifactId>storm-cassandra</artifactId>
			<version>0.4.0-rc1</version>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>1.9.5</version>
		</dependency>
		<dependency>
			<groupId>com.miglayout</groupId>
			<artifactId>miglayout</artifactId>
			<version>3.7.4</version>
		</dependency>
		<dependency>
			<groupId>net.sourceforge.mydoggy</groupId>
			<artifactId>mydoggy-plaf</artifactId>
			<version>1.5.0-beta-r1389</version>
		</dependency>
		<dependency>
			<groupId>net.sourceforge.mydoggy</groupId>
			<artifactId>mydoggy-api</artifactId>
			<version>1.5.0-beta-r1389</version>
		</dependency>
		<dependency>
			<groupId>org.quartz-scheduler</groupId>
			<artifactId>quartz</artifactId>
			<version>2.1.7</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>3.1.4.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.2</version>
		</dependency>
		<dependency>
			<groupId>nz.ac.waikato.cms.weka</groupId>
			<artifactId>weka-dev</artifactId>
			<version>3.7.9</version>
		</dependency>
		<dependency>
			<groupId>org.apache.hadoop</groupId>
			<artifactId>hadoop-mapreduce-client-common</artifactId>
			<version>2.0.3-alpha</version>
		</dependency>
		<dependency>
			<groupId>org.apache.hadoop</groupId>
			<artifactId>hadoop-common</artifactId>
			<version>2.0.3-alpha</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>4.1.10.Final</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-orm</artifactId>
			<version>3.1.4.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.ext</groupId>
			<artifactId>jersey-spring3</artifactId>
			<version>2.4.1</version>
		</dependency>

		<dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-bundle-jaxrs</artifactId>
			<version>2.7.7</version>
		</dependency>

		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-all</artifactId>
			<version>1.3</version>
		</dependency>
				
		<dependency>
		    <groupId>jdk.tools</groupId>
		    <artifactId>jdk.tools</artifactId>
		    <scope>system</scope>
		    <version>1.7</version>
		    <systemPath>${project.basedir}/../ElvenlandLib/lib/tools.jar</systemPath>
		</dependency>		
		
	</dependencies>


	<build>

		<resources>
			<resource>
				<directory>tt</directory>
				<excludes>
					<exclude>**/*.*</exclude>
				</excludes>
			</resource>
		</resources>

		<plugins>
			<!-- <plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>exec-maven-plugin</artifactId> 
				<configuration> <mainClass>com.elvenland.trading.App</mainClass> </configuration> 
				</plugin> -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<configuration>
					<executable>java</executable>
					<arguments>
						<argument>-Xms512m</argument>
						<argument>-Xmx512m</argument>
						<argument>-XX:NewRatio=3</argument>
						<argument>-XX:+PrintGCTimeStamps</argument>
						<argument>-XX:+PrintGCDetails</argument>
						<argument>-Xloggc:gc.log</argument>
						<argument>-classpath</argument>
						<classpath />
						<argument>com.elvenland.trading.TradeMain</argument>
					</arguments>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.4</version>
				<executions>
					<execution>
						<configuration>
							<finalName>trading</finalName>
							<descriptors>
								<descriptor>assembly/full.xml</descriptor>
							</descriptors>
						</configuration>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<artifactId>Trading</artifactId>
</project>
